Fixing alignment of header on homepage per issue #14

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -89,12 +89,6 @@ body.page-home {
         }
       }
     }
-
-    @include media-md {
-      .block-header {
-        text-align: right;
-      }
-    }
   }
 
 }
